
Use html_entity_decode to avoid problems when preparing comments for xml.

Added targets reports (same as attendance) through the print report script.

Implemented 'compound' columns which are reports with just categories
not comments. The edit report script changed to make sense of
this. The mark table displays a numerical value for the categories checked.


Version ClaSS-0.9.28 release (2010/10/13)
-----------------------------------------

Transitioning from XML_Unserializer to PHP5 functions for
simplexml. Affects xmlreader function at the moment.

Assessment columns from previous years can now carry over to courses
even when the curriculum structure is not identical.

Display emaillink function to handle clicktoemail and improved with
mailto if WebMail not configured.

Age and Course added to fetchstudent singlefield function.

Fixes and improvements to printing the transport list.

Added second nationality / dual citezenship figure to statistics page.

Fixed filter by gender for report assessments when using cohorts.


Version ClaSS-0.9.27 release (2010/10/4)
-----------------------------------------

Working on change to new comment writer.

Added fields to community table (apply the patch!) for extra curricular activities.

Editing of other groups in Admin including sessions and fee for clubs.

Test version of export community groups.

Emails to responsibles now include special needs.

Targets are differentiated by section.

Comments flagged in db when shared with guardians.

Moved all report comments over to tinyMCE and use xmlreader to process comments in fetch_report.

Switched on the past plugin for tinyMCE.

Included last year comparison to applications table.


Version ClaSS-0.9.26 release (2010/9/21)
-----------------------------------------

Transport editing added to the InfoBook. Also transport displayed in the
Register.

Added option for automatic setting of return journey.

Made the default SEN MedBook lists display all flagged students if not